modify server.sh